# website

./: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  eslint.config.js  firebase.json  index.html  knip.config.ts  lighthouserc.yml  lingui.config.ts  lint-staged.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tailwind.config.ts  vite.config.ts
.codacy/: codacy.yaml
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  code-review.instructions.md  commit-message.instructions.md  documentation.instructions.md  frontend.instructions.md  lighthouse.instructions.md  test.instructions.md
.github/workflows/: cd_docker.yaml  cd_dockerfile.yaml  cd_firebase.yaml  cd_ghpages.yml  cd_production.yaml  cd_staging.yaml  ci.yml  ci_lighthouse.yaml  deploy_dockerfile.yaml  deploy_firebase.yaml  (+4 more)
.husky/: pre-commit
dev-dist/: sw.js  workbox-6043c3ec.js
frontend/: .prettierignore  .prettierrc  Dockerfile  Dockerfile.dev  index.html  lingui.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
public/: llms.txt  robots.txt  sitemap.xml
scripts/: badges.json  extract-credly-certifications.mjs  translate.ts
scripts/translation-machine/: README.md  compose.yml  pyproject.toml
scripts/translation-machine/src/translations/: __init__.py
scripts/translation-machine/tests/: test_translations.py
src/: App.tsx  index.css  index.tsx
test/: setup.ts
website/: package.json  pnpm-lock.yaml  tsconfig.app.json
(+184 files in other folders)
