[project]
name = "translation-machine"
version = "0.1.0"
description = "PO Translator File Machine using Libre translate over localhost HTTP API using Python and Docker"
authors = [
    {name = "Henrique Bonfim"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polib (>=1.2.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]

[tool.poetry]
packages = [{include = "translations", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[project.scripts]
translate = 'translations:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
